--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <button onclick="calculate()">CALCULATE</button>
         <div class="result" id="result"></div>
-        <div class="footer">Designed by Stark ⚙️</div>
+        <div class="footer">Designed by KML ⚙️</div>
     </div>
 
 <script>
